Fixing alignment of filter options select, mostly for IE.

--- a/gui/css/main.css
+++ b/gui/css/main.css
@@ -1815,6 +1815,7 @@
     background: #ddd;
   }
   .filter input[type="text"] {
+    height: 35px;
     width: 65%;
     margin-bottom: .25em;
   }
